# ChangeLog for sci-chemistry/mustang
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/mustang/ChangeLog,v 1.7 2010/07/06 13:31:28 jlec Exp $

  06 Jul 2010; Justin Lecher <jlec@gentoo.org> mustang-3.2.1.ebuild:
  Keyworded for *-linux prefix

*mustang-3.2.1 (06 Jul 2010)

  06 Jul 2010; Justin Lecher <jlec@gentoo.org> +mustang-3.2.1.ebuild:
  Version Bump

  19 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/mustang-3-gcc43.patch, mustang-3.ebuild:
  Fix bug 250420 thanks to Joel <joel_123@hotmail.com>

  29 Apr 2008; Markus Dittrich <markusle@gentoo.org> ChangeLog:
  Redigested ebuild to fix broken Manifest (bug #219429).

  11 Dec 2006; Donnie Berkholz <dberkholz@gentoo.org>; mustang-3.ebuild:
  Stable on x86.

  11 Dec 2006; Donnie Berkholz <dberkholz@gentoo.org>; mustang-3.ebuild:
  License is more accurately the generic BSD than the specific Intel (although
  perhaps that shouldn't even exist); also add reference for citation (Arun S.
  Konagurthu).

*mustang-3 (21 Oct 2006)

  21 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; +metadata.xml,
  +mustang-3.ebuild:
  New package: MUltiple STructural AligNment AlGorithm.
