@@ -4,14 +4,14 @@ Hash: SHA1
 AUX mustang-3-gcc43.patch 2262 RMD160 d2f9d6de98f679af3b15507b42a410f1e0ba7e08 SHA1 532517644ceaaa0e4263cb04e78f3f47df450592 SHA256 2d9ec5f36d069e51909d56a58003c51bcd409c78946712753d313192c48558b2
 DIST mustang-3.2.1.tar 788480 RMD160 15de074d928aa09dda1543778f33b4b82dcc4c28 SHA1 11e47f853374d9ebd6c3a8187cb01f8e9f401bfe SHA256 29987d88eacc29e772ebf3d41eeac8b2d160e715f35b1a1a0eff462ea462042d
 DIST mustang_v.3.tgz 164752 RMD160 e90e55a0cf31955277a68e51f91bc1e00417dacb SHA1 d6e34ecc3094ec1f2c1dbce703a572bf75f406dc SHA256 6d35597930c456d03bb05d644408fd00b1e060d9c8f83353f33b06a42654f552
-EBUILD mustang-3.2.1.ebuild 1152 RMD160 37aea1888110b6622bcf09310efbfbff133d5453 SHA1 1747b5bc6a1488128cbca6f3cf0052791181d6ec SHA256 591aa9834c433f7d176153e3a56073ced235f697a8bec68c41b228a279bf9783
+EBUILD mustang-3.2.1.ebuild 1188 RMD160 f64e8362cdbbfdbbab9edbfd89ec7647799aff2e SHA1 0ea48c3b06107143ee8d90113aa0ea5b1b23c214 SHA256 547bbd8c17900bc20c7a01acf9798c81dba57cef6448091ec48d9ef2edc1b8dd
 EBUILD mustang-3.ebuild 1126 RMD160 e7346977f2dd6b295021c7508b9572cb4438ccea SHA1 b1b0f9443f4d61a3fcb0b2a264769fcf73881421 SHA256 7153751c03d8d4506c37424de8d09c27e36d9a9c1320f44e1531c2244df5a178
-MISC ChangeLog 1224 RMD160 35da4427a25f722abf20628df21eca86532158d3 SHA1 e24acae345dbc262b808667597382175348241b7 SHA256 bc4721245c9ba6a48e601a41f972a18807ccd713822a4d7413e660da99b64d2c
+MISC ChangeLog 1344 RMD160 14a13ea1197d33665b5010ee544eda0cd1fbdeb2 SHA1 b0370b046862409009b4307be57dfc4991566f21 SHA256 4659a5d2e9f6a728ffc9833e3c245437311bd69b36f1589f0be3735a564a22db
 MISC metadata.xml 166 RMD160 4452298fd03e7c9395d1182bfe69d60a14144af6 SHA1 cb0b513473c0348f4f6f6cd9a132e4884155fddb SHA256 84c92b49702daf95eace8d2765215cbd8650da4ef776f9f700b5ce3785dec852
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwzMDUACgkQgAnW8HDreRbjswCgkefDNIFu2EYTfLmS5QFqjL2B
-RzMAoIKofG6dkL1IYGYrGGvvIMqpU5cF
-=QIcG
+iEYEARECAAYFAkw0QaMACgkQgAnW8HDreRaAegCgoqLfaTGS8RdLadur0JzpHRZ6
+PxYAn3JR1KgbNyeCz+91V9ia6uzzthwV
+=oJOy
 -----END PGP SIGNATURE-----
